:adhesive_bandage: If there is no pets jet accept the message